# clox

./: .gitignore  TODO.md  justfile  meson.build  n.py
include/: chunk.h  common.h  compiler.h  debug.h  hello.h  memory.h  object.h  scanner.h  table.h  utils.h  value.h  vm.h
src/: chunk.c  compiler.c  debug.c  hello.c  main.c  memory.c  object.c  scanner.c  table.c  utils.c  value.c  vm.c
